--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-plumber",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "a nodeschool workshop for learning how to work with data",
   "main": "index.js",
   "bin": {
@@ -16,6 +16,7 @@
     "gasket": "^0.4.0",
     "split": "^0.3.0",
     "styled": "0.0.1",
+    "through": "^2.3.4",
     "tuple-stream": "0.0.2"
   },
   "repository": {
