--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-plumber",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "a nodeschool workshop for learning how to work with data",
   "main": "index.js",
   "bin": {
@@ -10,13 +10,12 @@
   "license": "BSD",
   "devDependencies": {},
   "dependencies": {
-    "JSONStream": "^0.8.4",
     "adventure": "^2.4.0",
     "ansimd": "0.0.1",
     "csv-parser": "^1.4.1",
     "diff": "^1.0.8",
     "gasket": "^0.5.0",
-    "jku": "0.0.2",
+    "jsonfilter": "^1.0.1",
     "split": "^0.3.0",
     "styled": "0.0.1",
     "through": "^2.3.4",
