--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "split": "^0.3.0",
     "styled": "0.0.1",
     "through": "^2.3.4",
+    "transform-uppercase": "^1.0.0",
     "trim-object-stream": "^1.0.0",
     "tuple-stream": "0.0.2",
     "win-spawn": "^2.0.0"
