--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ansimd": "0.0.1",
     "csv-parser": "^1.4.1",
     "diff": "^1.0.8",
+    "excel-stream": "^1.0.1",
     "gasket": "^0.5.0",
     "jsonfilter": "^1.0.1",
     "split": "^0.3.0",
