--- a/problems/xls/package.json
+++ b/problems/xls/package.json
@@ -2,9 +2,10 @@
   "name": "my-module",
   "version": "0.0.1",
   "gasket": [
-    "excel-stream --newline"
+    "excel-stream --newlines",
+    "jsonfilter DESCRIPTION"
   ],
   "dependencies": {
-    "excel-stream": "^1.0.1"
+    "excel-stream": "^1.0.2"
   }
 }
